fix github tagName

--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -84,7 +84,7 @@ jreleaser {
   release {
     github {
       skipTag = true
-      tagName = '{{tagName}}'
+      tagName = '{{projectVersion}}'
     }
   }
 }
