`-`がタグに含まれている場合はプレリリース扱いに

--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -85,6 +85,9 @@ jreleaser {
     github {
       skipTag = true
       tagName = '{{projectVersion}}'
+      prerelease {
+        pattern = '.*-.*'
+      }
     }
   }
 }
