--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,7 +1,7 @@
 plugins {
   id 'java-library'
   id 'maven-publish'
-  id 'com.palantir.git-version' version '3.0.0'
+  alias(libs.plugins.git.version)
   alias(libs.plugins.jreleaser)
 }
 
