--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,11 @@
 [versions]
 junit-jupiter = "5.10.3"
 jreleaser = "1.15.0"
+git-version = "3.0.0"
 
 [libraries]
 junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit-jupiter" }
 
 [plugins]
 jreleaser = { id = "org.jreleaser", version.ref = "jreleaser" }
+git-version = { id = "com.palantir.git-version", version.ref = "git-version" }
